# Peril

./: .gitignore  README.md  dune
gfx/: battle.xcf  dice.xcf  ui.xcf
libs/: FreeType.ml  FreeType_stubs.c  GL.ml  GL_stubs.c  dune
maps/: Earth.xcf  Earth.xml
shaders/: basic.frag  basic.vert  pulse.frag  pulse.vert  text.frag  text.vert
src/: color.ml  dune  game.ml  map.ml  peril.ml  player.ml  render.ml  text.ml  ui.ml  utils.ml  vec2.ml
